--- a/lab-chatbot-iOS/Storyboard/Base.lproj/Main.storyboard
+++ b/lab-chatbot-iOS/Storyboard/Base.lproj/Main.storyboard
@@ -21,18 +21,22 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="35u-5R-dM5" userLabel="DockView">
                                 <rect key="frame" x="0.0" y="718" width="375" height="94"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Send a message" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rsb-SZ-NGh">
+                                    <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Send a message" textAlignment="justified" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="rsb-SZ-NGh">
                                         <rect key="frame" x="8" y="15" width="315" height="30"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="315" id="58X-sn-wx9"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="jNK-PU-3c1"/>
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardAppearance="light"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="58d-8z-kxy">
                                         <rect key="frame" x="331" y="15" width="36" height="30"/>
                                         <state key="normal" title="Send"/>
+                                        <connections>
+                                            <action selector="sendButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="833-H8-aTh"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.84694241749999999" green="0.84694241749999999" blue="0.84694241749999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -48,42 +52,51 @@
                                     <constraint firstItem="58d-8z-kxy" firstAttribute="leading" secondItem="rsb-SZ-NGh" secondAttribute="trailing" constant="8" id="web-1g-Oo3"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YID-xH-hd5">
-                                <rect key="frame" x="0.0" y="88" width="375" height="630"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="wWI-zc-YTa">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="POST"/>
-                                    <connections>
-                                        <action selector="onPostTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kEp-p7-PHe"/>
-                                    </connections>
-                                </button>
-                            </tableView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lBb-6H-orX">
                                 <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="ChatBot" id="Qff-wt-NAv"/>
                                 </items>
                             </navigationBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jD5-EJ-VO6">
+                                <rect key="frame" x="0.0" y="88" width="375" height="630"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yc8-rI-OJQ">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="COi-Xz-wdb">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="YID-xH-hd5" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9aK-k2-So2"/>
+                            <constraint firstItem="jD5-EJ-VO6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7pe-bi-jNW"/>
                             <constraint firstItem="lBb-6H-orX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dbj-Ut-Gce"/>
-                            <constraint firstItem="35u-5R-dM5" firstAttribute="top" secondItem="YID-xH-hd5" secondAttribute="bottom" id="Gur-OO-zYy"/>
+                            <constraint firstItem="jD5-EJ-VO6" firstAttribute="top" secondItem="lBb-6H-orX" secondAttribute="bottom" id="HST-1V-BJy"/>
                             <constraint firstItem="35u-5R-dM5" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="J2D-fB-dJ4"/>
-                            <constraint firstItem="YID-xH-hd5" firstAttribute="top" secondItem="lBb-6H-orX" secondAttribute="bottom" id="LKk-Gm-dQ4"/>
                             <constraint firstItem="35u-5R-dM5" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="34" id="T3u-G6-Jel"/>
-                            <constraint firstItem="YID-xH-hd5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Usg-rl-qBf"/>
                             <constraint firstItem="35u-5R-dM5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Why-vA-COj"/>
-                            <constraint firstItem="YID-xH-hd5" firstAttribute="top" secondItem="lBb-6H-orX" secondAttribute="bottom" id="YFK-Yo-vB2"/>
-                            <constraint firstItem="35u-5R-dM5" firstAttribute="top" secondItem="YID-xH-hd5" secondAttribute="bottom" id="arI-ys-x8e"/>
                             <constraint firstItem="lBb-6H-orX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="b6Z-VH-NlC"/>
+                            <constraint firstItem="35u-5R-dM5" firstAttribute="top" secondItem="jD5-EJ-VO6" secondAttribute="bottom" id="ibg-gi-fQ9"/>
                             <constraint firstItem="lBb-6H-orX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="kd8-jG-AIi"/>
+                            <constraint firstItem="jD5-EJ-VO6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ueq-3H-pbz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="messageTextField" destination="rsb-SZ-NGh" id="bBi-sz-gx6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
