--- a/lab-chatbot-iOS/Storyboard/Base.lproj/Main.storyboard
+++ b/lab-chatbot-iOS/Storyboard/Base.lproj/Main.storyboard
@@ -18,22 +18,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lBb-6H-orX">
+                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="ChatBot" id="Qff-wt-NAv"/>
+                                </items>
+                            </navigationBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jD5-EJ-VO6">
+                                <rect key="frame" x="0.0" y="88" width="375" height="596"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yc8-rI-OJQ">
+                                    <size key="itemSize" width="71" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="COi-Xz-wdb">
+                                        <rect key="frame" x="0.0" y="0.0" width="71" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="71" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="35u-5R-dM5" userLabel="DockView">
-                                <rect key="frame" x="0.0" y="718" width="375" height="94"/>
+                                <rect key="frame" x="0.0" y="684" width="375" height="94"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Send a message" textAlignment="justified" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="rsb-SZ-NGh">
-                                        <rect key="frame" x="8" y="15" width="315" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="315" id="58X-sn-wx9"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="jNK-PU-3c1"/>
-                                        </constraints>
-                                        <nil key="textColor"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="GUg-Ry-o9e">
+                                        <rect key="frame" x="20" y="20" width="289" height="54"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardAppearance="light"/>
-                                    </textField>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="58d-8z-kxy">
-                                        <rect key="frame" x="331" y="15" width="36" height="30"/>
+                                        <rect key="frame" x="317" y="21" width="38" height="30"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                         <state key="normal" title="Send"/>
+                                        <variation key="heightClass=regular-widthClass=compact">
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        </variation>
                                         <connections>
                                             <action selector="sendButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="833-H8-aTh"/>
                                         </connections>
@@ -42,42 +68,15 @@
                                 <color key="backgroundColor" red="0.84694241749999999" green="0.84694241749999999" blue="0.84694241749999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="58d-8z-kxy" firstAttribute="top" secondItem="35u-5R-dM5" secondAttribute="top" constant="15" id="2cR-oD-EsX"/>
-                                    <constraint firstAttribute="trailing" secondItem="58d-8z-kxy" secondAttribute="trailing" constant="8" id="L3I-Hn-gGE"/>
-                                    <constraint firstItem="rsb-SZ-NGh" firstAttribute="leading" secondItem="35u-5R-dM5" secondAttribute="leading" constant="8" id="NYg-7M-shl"/>
-                                    <constraint firstItem="58d-8z-kxy" firstAttribute="leading" secondItem="rsb-SZ-NGh" secondAttribute="trailing" constant="8" id="Wx0-r2-3o6"/>
-                                    <constraint firstItem="rsb-SZ-NGh" firstAttribute="top" secondItem="35u-5R-dM5" secondAttribute="top" constant="15" id="YEU-jq-uvT"/>
-                                    <constraint firstAttribute="bottom" secondItem="rsb-SZ-NGh" secondAttribute="bottom" constant="49" id="aZM-z6-5Tg"/>
-                                    <constraint firstAttribute="bottom" secondItem="58d-8z-kxy" secondAttribute="bottom" constant="49" id="nBf-hI-AMz"/>
-                                    <constraint firstItem="58d-8z-kxy" firstAttribute="leading" secondItem="rsb-SZ-NGh" secondAttribute="trailing" constant="8" id="web-1g-Oo3"/>
+                                    <constraint firstItem="GUg-Ry-o9e" firstAttribute="leading" secondItem="35u-5R-dM5" secondAttribute="leading" constant="20" id="FTs-aq-3bS"/>
+                                    <constraint firstItem="58d-8z-kxy" firstAttribute="leading" secondItem="GUg-Ry-o9e" secondAttribute="trailing" constant="8" id="G8H-lN-zYH"/>
+                                    <constraint firstAttribute="bottom" secondItem="GUg-Ry-o9e" secondAttribute="bottom" constant="20" id="OEs-oJ-4A3"/>
+                                    <constraint firstItem="58d-8z-kxy" firstAttribute="top" secondItem="35u-5R-dM5" secondAttribute="top" constant="21" id="Vf7-ye-F1x"/>
+                                    <constraint firstAttribute="bottom" secondItem="58d-8z-kxy" secondAttribute="bottom" constant="43" id="WSE-eT-Bsm"/>
+                                    <constraint firstAttribute="trailing" secondItem="58d-8z-kxy" secondAttribute="trailing" constant="20" id="bIq-9d-Yrv"/>
+                                    <constraint firstItem="GUg-Ry-o9e" firstAttribute="top" secondItem="35u-5R-dM5" secondAttribute="top" constant="20" id="s2J-UE-1Bl"/>
                                 </constraints>
                             </view>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lBb-6H-orX">
-                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                                <items>
-                                    <navigationItem title="ChatBot" id="Qff-wt-NAv"/>
-                                </items>
-                            </navigationBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jD5-EJ-VO6">
-                                <rect key="frame" x="0.0" y="88" width="375" height="630"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yc8-rI-OJQ">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="COi-Xz-wdb">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -85,7 +84,7 @@
                             <constraint firstItem="lBb-6H-orX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dbj-Ut-Gce"/>
                             <constraint firstItem="jD5-EJ-VO6" firstAttribute="top" secondItem="lBb-6H-orX" secondAttribute="bottom" id="HST-1V-BJy"/>
                             <constraint firstItem="35u-5R-dM5" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="J2D-fB-dJ4"/>
-                            <constraint firstItem="35u-5R-dM5" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="34" id="T3u-G6-Jel"/>
+                            <constraint firstItem="35u-5R-dM5" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="T3u-G6-Jel"/>
                             <constraint firstItem="35u-5R-dM5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Why-vA-COj"/>
                             <constraint firstItem="lBb-6H-orX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="b6Z-VH-NlC"/>
                             <constraint firstItem="35u-5R-dM5" firstAttribute="top" secondItem="jD5-EJ-VO6" secondAttribute="bottom" id="ibg-gi-fQ9"/>
@@ -95,7 +94,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="messageTextField" destination="rsb-SZ-NGh" id="bBi-sz-gx6"/>
+                        <outlet property="messageTextView" destination="GUg-Ry-o9e" id="tbb-jU-Ywp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
